--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -3,7 +3,13 @@ on:
   pull_request:
     types:
       - opened
-  workflow_dispatch: 
+  workflow_dispatch:
+  push:
+    branches: 
+      - main
+      - dev
+    paths-ignore: 
+      - '.github/workflows/*'
 jobs:
   deploy:
     runs-on: ubuntu-latest
